Generates shopping list from database, can increment the quantity with the buttons

--- a/src/pages/home/home.html
+++ b/src/pages/home/home.html
@@ -15,6 +15,9 @@
 </ion-content>
 -->
 <ion-header center text-center>
+  <ion-navbar>
+    <ion-title>Create Shopping List</ion-title>
+  </ion-navbar>
 </ion-header>
 
 <ion-content center text-center>
@@ -28,26 +31,26 @@
     <ion-item>
       <ion-row>
         <ion-col width-50 center text-center>
-          List Items
+          <h4>List Items</h4>
         </ion-col>
         <ion-col width-50 center text-center>
-            Quantity
+            <h4>Quantity</h4>
         </ion-col>
       </ion-row>
     </ion-item>
 
-     <ion-item-sliding>
+     <ion-item-sliding *ngFor="let shoppingListItem of shoppingListItems | async; let i = index;">
       <ion-item>
         <ion-row>
           <ion-col width-50 center text-center>
-            eggs
+            {{i + 1}}. {{shoppingListItem.item}}
           </ion-col>
           <ion-col width-50 center text-center>
-            <button ion-button color="primary">
+            <button ion-button color="primary" (click)="minusItem(shoppingListItem.$key, shoppingListItem.itemCount)">
               <ion-icon name="ios-arrow-back"></ion-icon>
             </button>
-              12
-            <button ion-button color="primary">
+              {{shoppingListItem.itemCount}}
+            <button ion-button color="primary" (click)="addItem(shoppingListItem.$key, shoppingListItem.itemCount)">
               <ion-icon name="ios-arrow-forward"></ion-icon>
             </button>
           </ion-col>
